// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`bottom-toolbar => дефолтное состояние 1`] = `
<div
  class="bottom-toolbar bottom-toolbar_position_bottom"
>
  <div
    class="action-buttons"
  >
    <lego-components_button
      aria-live="assertive"
      classname="save-button save-button_save action-buttons__button action-buttons__button_save"
      innerref="[object Object]"
      onclick="function () { [native code] }"
      size="m"
      theme="raised"
      view="action"
    >
      <span>
        Сохранить на Яндекс.Диск
      </span>
    </lego-components_button>
    <lego-components_button
      classname="download-button action-buttons__button action-buttons__button_download"
      disabled="false"
      iconleft="function (className) {
            return /*#__PURE__*/_react.default.createElement(_download.default, {
              iconSize: \\"m\\",
              cls: className
            });
          }"
      innerref="[object Object]"
      onclick="function () { [native code] }"
      size="m"
      view="raised"
    >
      Скачать
    </lego-components_button>
  </div>
  <div
    class="bottom-toolbar__snackbar"
  />
</div>
`;

exports[`bottom-toolbar => с нотифайкой ERROR_TEXT 1`] = `
<div
  class="bottom-toolbar bottom-toolbar_position_bottom bottom-toolbar_notification_opening"
>
  <div
    class="action-buttons"
  >
    <lego-components_button
      aria-live="assertive"
      classname="save-button save-button_save action-buttons__button action-buttons__button_save"
      innerref="[object Object]"
      onclick="function () { [native code] }"
      size="m"
      theme="raised"
      view="action"
    >
      <span>
        Сохранить на Яндекс.Диск
      </span>
    </lego-components_button>
    <lego-components_button
      classname="download-button action-buttons__button action-buttons__button_download"
      disabled="false"
      iconleft="function (className) {
            return /*#__PURE__*/_react.default.createElement(_download.default, {
              iconSize: \\"m\\",
              cls: className
            });
          }"
      innerref="[object Object]"
      onclick="function () { [native code] }"
      size="m"
      view="raised"
    >
      Скачать
    </lego-components_button>
  </div>
  <div
    class="bottom-toolbar__snackbar bottom-toolbar__snackbar_type_error-text"
  >
    <div
      class="bottom-toolbar__notification-wrapper bottom-toolbar__notification-wrapper_other"
    >
      <div
        class="notification notification_error js-prevent-deselect"
      >
        <div
          class="notification__body"
        >
          <span
            aria-live="assertive"
            role="alert"
          >
            error notification text
          </span>
        </div>
        <lego-components_button
          aria-label="Закрыть"
          classname="notification__button-close"
          onclick="function () { [native code] }"
          size="m"
          view="clear-inverse"
        />
      </div>
    </div>
    <span
      class="bottom-toolbar__snackbar-text"
    >
      error notification text
    </span>
  </div>
</div>
`;

exports[`bottom-toolbar => с нотифайкой TEXT 1`] = `
<div
  class="bottom-toolbar bottom-toolbar_position_bottom bottom-toolbar_notification_opened"
>
  <div
    class="action-buttons"
  >
    <lego-components_button
      aria-live="assertive"
      classname="save-button save-button_save action-buttons__button action-buttons__button_save"
      innerref="[object Object]"
      onclick="function () { [native code] }"
      size="m"
      theme="raised"
      view="action"
    >
      <span>
        Сохранить на Яндекс.Диск
      </span>
    </lego-components_button>
    <lego-components_button
      classname="download-button action-buttons__button action-buttons__button_download"
      disabled="false"
      iconleft="function (className) {
            return /*#__PURE__*/_react.default.createElement(_download.default, {
              iconSize: \\"m\\",
              cls: className
            });
          }"
      innerref="[object Object]"
      onclick="function () { [native code] }"
      size="m"
      view="raised"
    >
      Скачать
    </lego-components_button>
  </div>
  <div
    class="bottom-toolbar__snackbar bottom-toolbar__snackbar_type_text"
  >
    <div
      class="bottom-toolbar__notification-wrapper bottom-toolbar__notification-wrapper_other"
    >
      <div
        class="notification js-prevent-deselect"
      >
        <div
          class="notification__body"
        >
          <span
            aria-live="assertive"
            role="alert"
          >
            notification text
          </span>
        </div>
        <lego-components_button
          aria-label="Закрыть"
          classname="notification__button-close"
          onclick="function () { [native code] }"
          size="m"
          view="clear-inverse"
        />
      </div>
    </div>
    <span
      class="bottom-toolbar__snackbar-text"
    >
      notification text
    </span>
  </div>
</div>
`;

exports[`bottom-toolbar => с нотифайкой TEXT_BUTTON 1`] = `
<div
  class="bottom-toolbar bottom-toolbar_position_bottom bottom-toolbar_notification_opened"
>
  <div
    class="action-buttons"
  >
    <lego-components_button
      aria-live="assertive"
      classname="save-button save-button_save action-buttons__button action-buttons__button_save"
      innerref="[object Object]"
      onclick="function () { [native code] }"
      size="m"
      theme="raised"
      view="action"
    >
      <span>
        Сохранить на Яндекс.Диск
      </span>
    </lego-components_button>
    <lego-components_button
      classname="download-button action-buttons__button action-buttons__button_download"
      disabled="false"
      iconleft="function (className) {
            return /*#__PURE__*/_react.default.createElement(_download.default, {
              iconSize: \\"m\\",
              cls: className
            });
          }"
      innerref="[object Object]"
      onclick="function () { [native code] }"
      size="m"
      view="raised"
    >
      Скачать
    </lego-components_button>
  </div>
  <div
    class="bottom-toolbar__snackbar bottom-toolbar__snackbar_type_text-button"
  >
    <div
      class="bottom-toolbar__notification-wrapper bottom-toolbar__notification-wrapper_other"
    >
      <div
        class="notification notification_active js-prevent-deselect"
      >
        <div
          class="notification__body"
        >
          <span
            aria-live="assertive"
            role="alert"
          >
            notification with button text
          </span>
        </div>
        <lego-components_button
          aria-label="Закрыть"
          classname="notification__button-close"
          onclick="function () { [native code] }"
          size="m"
          view="clear-inverse"
        />
      </div>
    </div>
    <span
      class="bottom-toolbar__snackbar-text"
    >
      notification with button text
    </span>
    <lego-components_button
      classname="bottom-toolbar__snackbar-button"
      onclick="function () { [native code] }"
      size="m"
      type="link"
      view="clear-inverse"
    >
      text on button
    </lego-components_button>
  </div>
</div>
`;
